# deepagents

./: .gitignore  README.md
tiktok_slideshow_agent/: CHECKPOINT_CLEANUP.md  Dockerfile  KNOWLEDGE_BASE_SCHEMA.md  README.md  agent.py  debug_tavily.py  docker-compose.prod.yml  format_library.json  knowledge_base.json  langgraph.json  monitor_db.py  pyproject.toml  quick_check.sh  slideshows.json  test_drive_auth.py  verify_postgres.sh  verify_smart_selection.py
tiktok_slideshow_agent/docs/: marketing_critique.md  prd_decisions.md  system_architecture.md
tiktok_slideshow_agent/image_library/: images.json
tiktok_slideshow_agent/skills/agent-task-formatter/: SKILL.md
tiktok_slideshow_agent/skills/agent-task-formatter/references/: api_reference.md
tiktok_slideshow_agent/skills/agent-task-formatter/scripts/: example.py
tiktok_slideshow_agent/skills/creative-brief-manager/: SKILL.md
tiktok_slideshow_agent/skills/creative-brief-manager/references/: api_reference.md
tiktok_slideshow_agent/skills/creative-brief-manager/scripts/: brief_manager.py  example.py  validate_brief.py
tiktok_slideshow_agent/skills/orchestrator-workflow/: SKILL.md
tiktok_slideshow_agent/skills/orchestrator-workflow/references/: api_reference.md
tiktok_slideshow_agent/skills/orchestrator-workflow/scripts/: example.py
tiktok_slideshow_agent/skills/publisher-skill/: SKILL.md
tiktok_slideshow_agent/skills/publisher-skill/references/: api_reference.md
tiktok_slideshow_agent/skills/publisher-skill/scripts/: drive_publisher.py  (+4 more)
tiktok_slideshow_agent/skills/visual-designer-skill/: SKILL.md
tiktok_slideshow_agent/tiktok_slideshow_agent/: nodes.py  rotating_model.py  state.py
tiktok_slideshow_agent/tiktok_slideshow_agent/prompts/: creative_director.py  orchestrator.py  specialists.py
tiktok_slideshow_agent/tiktok_slideshow_agent/tools/: agent_tools.py  drive.py  images.py  knowledge.py  pexels_handler.py  pexels_tool.py  render_worker.py  renderer.py  sync_tool.py  vision_tool.py
(+51 files in other folders)
