[project]
name = "tiktok_slideshow_agent"
version = "0.1.0"
description = "AI Agent for generating TikTok slideshows"
authors = [{name = "Mindreader", email = "mindreader@example.com"}]
dependencies = [
    "langgraph==1.0.2",
    "langchain-google-genai==4.1.3",
    "langchain-community==0.4.1",
    "protobuf==6.33.0",
    "playwright==1.57.0",
    "pillow",
    "google-api-python-client==2.187.0",
    "google-auth==2.47.0",
    "google-auth-oauthlib==1.2.1",
    "deepagents>=0.2.5,<0.3.0",
    "langchain-tavily==0.2.16",
    "httpx",
]

requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["tiktok_slideshow_agent*"]
